[gd_scene load_steps=13 format=3 uid="uid://covgit3a5hdkc"]

[ext_resource type="Script" uid="uid://cxso4bm48rvhs" path="res://script/human_side.gd" id="1_ys8ky"]
[ext_resource type="Texture2D" uid="uid://2741t2k1ouhm" path="res://resource/warrior.png" id="2_i371p"]
[ext_resource type="Texture2D" uid="uid://b3teu5la20wb7" path="res://resource/sorcerer.png" id="3_4t3os"]
[ext_resource type="Texture2D" uid="uid://c3fymp7dmdp2g" path="res://resource/rogue.png" id="4_jtnbt"]
[ext_resource type="Texture2D" uid="uid://djlipa5ecxat8" path="res://resource/bard.png" id="5_3jlvf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i371p"]
bg_color = Color(0.6, 0.6, 0.6, 0)
shadow_color = Color(1, 1, 1, 0.32549)
shadow_size = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jtnbt"]
shadow_color = Color(1, 1, 1, 0.321569)
shadow_size = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4t3os"]
shadow_color = Color(1, 1, 1, 0.321569)
shadow_size = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3jlvf"]
shadow_color = Color(1, 1, 1, 0.317647)
shadow_size = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ys8ky"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="Theme" id="Theme_d74jo"]
TextEdit/styles/normal = SubResource("StyleBoxFlat_ys8ky")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1ycf2"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="HumanSide" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ys8ky")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -491.0
offset_right = 491.0
offset_bottom = 647.0
grow_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="WarriorButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(130, 130)
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_i371p")

[node name="Sprite2D" type="Sprite2D" parent="VBoxContainer/HBoxContainer/WarriorButton"]
position = Vector2(65, 65)
scale = Vector2(0.57, 0.57)
texture = ExtResource("2_i371p")

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="SorcererButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(130, 130)
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_jtnbt")

[node name="Sprite2D2" type="Sprite2D" parent="VBoxContainer/HBoxContainer/SorcererButton"]
position = Vector2(65, 65)
scale = Vector2(0.64, 0.64)
texture = ExtResource("3_4t3os")

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="RogueButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(130, 130)
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_4t3os")

[node name="Sprite2D3" type="Sprite2D" parent="VBoxContainer/HBoxContainer/RogueButton"]
position = Vector2(65, 65)
scale = Vector2(0.57, 0.57)
texture = ExtResource("4_jtnbt")

[node name="VSeparator3" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="BardButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(130, 130)
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_3jlvf")

[node name="Sprite2D7" type="Sprite2D" parent="VBoxContainer/HBoxContainer/BardButton"]
position = Vector2(65, 65)
scale = Vector2(0.64, 0.64)
texture = ExtResource("5_3jlvf")

[node name="Margin" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="ClassDescription" type="TextEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
theme = SubResource("Theme_d74jo")
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_colors/font_placeholder_color = Color(1, 1, 1, 1)
theme_override_colors/font_readonly_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_selected_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/read_only = SubResource("StyleBoxFlat_1ycf2")
editable = false

[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer/WarriorButton" to="." method="_on_warrior_button_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/HBoxContainer/WarriorButton" to="." method="_on_warrior_button_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/WarriorButton" to="." method="_on_warrior_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer/SorcererButton" to="." method="_on_sorcerer_button_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/HBoxContainer/SorcererButton" to="." method="_on_sorcerer_button_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/SorcererButton" to="." method="_on_sorcerer_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer/RogueButton" to="." method="_on_rogue_button_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/HBoxContainer/RogueButton" to="." method="_on_rogue_button_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/RogueButton" to="." method="_on_rogue_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer/BardButton" to="." method="_on_bard_button_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/HBoxContainer/BardButton" to="." method="_on_bard_button_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/BardButton" to="." method="_on_bard_button_pressed"]
